--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,21 @@
+server.contextPath=/ecommerce
 
+spring.datasource.url=jdbc:h2:mem:AZ;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.initialization-mode=never
+spring.hibernate.show_sql=true
+
+springdoc.swagger-ui.enabled=true
+
+swagger.email=Claudiney Marques Viana<claudineym@gmail.com>
+swagger.termosDeServicoUrl=
+swagger.groupName= Ecommerce
+swagger.tituloDocumentacao= Ecommerce
+swagger.descricaoDocumentacao= Loja Online
+swagger.apiKeyName=bearer-token
+swagger.apiversion=v1
+swagger.apiRepositoryUrl=https://github.com/Claudineym/ecommerce-poc
