novo modelo Vendedor

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,7 @@ spring.datasource.initialization-mode=never
 spring.hibernate.show_sql=true
 
 springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.path=/swagger-ui.html
 
 swagger.email=Claudiney Marques Viana<claudineym@gmail.com>
 swagger.termosDeServicoUrl=
